--- a/Kassensystem/index.html
+++ b/Kassensystem/index.html
@@ -33,15 +33,15 @@
             </div>
 
             <div id="buttonssumme" class="numpad">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button>Bonkopie</button>
+                <button>Zeilenstorno</button>
+                <button>Sofortstorno</button>
                 <button>Code</button>
                 <button>Gutscheine</button>
                 <button>Leergut</button>
                 <button>Non-Food</button>
                 <button>Lebensmittel</button>
-                <button>Summe</button>
+                <button id="Summe">Summe</button>
             </div>
             <!-- 6 Knöpfe unten (3 oben, 3 unten) -->
         </div>
