--- a/Kassensystem/index.html
+++ b/Kassensystem/index.html
@@ -18,7 +18,7 @@
         <div id="left-section">
             <div id="Listeitems">
                 <!-- Liste oben -->
-                <ul>
+                <ul id="Listeu">
                     <li id="Listenelement">
                     </li>
 
