--- a/Kassensystem/index.html
+++ b/Kassensystem/index.html
@@ -27,6 +27,9 @@
 
             </div>
 
+            <div id="Summenfeld">
+
+            </div>
             <!-- Nummernanzeige-Feld darunter -->
             <div id="number-display">
 
@@ -34,13 +37,13 @@
 
             <div id="buttonssumme" class="numpad">
                 <button>Bonkopie</button>
-                <button>Zeilenstorno</button>
-                <button>Sofortstorno</button>
+                <button id="showButtons">Zeilenstorno</button>
+                <button id="entfernenButton">Sofortstorno</button>
                 <button>Code</button>
                 <button>Gutscheine</button>
-                <button>Leergut</button>
-                <button>Non-Food</button>
-                <button>Lebensmittel</button>
+                <button id="abzug">Abzüge</button>
+                <button id="nonfood">Non-Food 19%</button>
+                <button id="leben">Lebensmittel 7%</button>
                 <button id="Summe">Summe</button>
             </div>
             <!-- 6 Knöpfe unten (3 oben, 3 unten) -->
@@ -111,8 +114,11 @@
                 <button>0</button>
                 <button>00</button>
 
+
+                <button id="clearall">C</button>
                 <button id="clear">Del</button>
                 <button id="input">Eingabe</button>
+
 
             </div>
         </div>
